v0.76.2.12:
	- Possible fix for Essentials teleport refusing to engage and towny defaulting to it's own timer.
	- Moved all chat handling to a seperate jar (TownyChat.jar).
	  TownyChat is a Fully functional chat manager. If it's enabled it will handle all chat and supports custom chat channels.
	  This new system supports total customization of chat.
	  It supports custom chat channels, with access control via permission nodes.
	  Current channels are:-
	    /tc (town chat) permission node: towny.chat.town
	    /nc (nation chat) permission node: towny.chat.nation
	    /a (admin chat) permission node: towny.chat.admin
	    /m (moderators chat) permission node: towny.chat.mod
	  TownyChat also supports other chat plugins (herochat, iChat etc). To use another chat plugin with Towny...
	    Set modify_chat.enable : false
	    Then add any of the towny tags into your chat plugins format line.
v0.77.0.0:
	- Release.
v0.77.0.1:
	- Fixed resident colour in config.
	- Fixed creation of the logs folder for new installs causing an error at startup.
	- Added..
	  {townformatted} - Displays town name if a member of a town (using tag_format.town).
      {nationformatted} - Displays nation name if a member of a nation (using tag_format.nation).
    - Changed {townyfullnames} to {townyformatted}.
    - Fixed an error on town loading caused by the new plot level permissions.
v0.77.0.2:
	- Towny now accepts worlds with spaces in their names.
	- Added a 'wilds' plot type. This type allows mayors to set the plot to wilds and it follows wilderness build/break rules for residents only.
	  Handy for adding a protection zones arround a town where residents can farm tree's and plant sapplings.
v0.77.0.3:
	- changed modify_chat.format to modify_chat.Chat_format so it will force an upgrade of the chat format for those having trouble with copy/paste.
	- Fixed Arena plots so they properly allow PVP.
	- Towny cheat protection no longer opperates in worlds where towny is disabled.